force-app/main/default/objects/JetPay_Access__c/JetPay_Access__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>JetPay Access</label>
</CustomObject>