force-app/main/default/objects/JetPay_Access__c/fields/Allow_All_Users__c.field-meta.xml
<CustomField>
    <fullName>Allow_All_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow All Users</label>
    <type>Checkbox</type>
</CustomField>