force-app/main/default/objects/JetPay_Access__c/fields/Specific_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Specific_Profiles__c</fullName>
    <label>Specific Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>