force-app/main/default/objects/JetPay_Access__c/fields/Specific_Users__c.field-meta.xml
<CustomField>
    <fullName>Specific_Users__c</fullName>
    <label>Specific Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>