force-app/main/default/objects/JetPay_Access__c/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>NAME</columns>
    <columns>Allow_All_Users__c</columns>
    <columns>Specific_Profiles__c</columns>
    <columns>Specific_Roles__c</columns>
    <columns>Specific_Users__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
</ListView>